--- a/public/animations/styles.css
+++ b/public/animations/styles.css
@@ -1,7 +1,3 @@
-body {
-  background-color: #01191d;
-}
-
 #rocket {
   position: absolute;
   width: 80px;
@@ -16,13 +12,14 @@ body {
   width: 300px;
   height: 300px;
   border-radius: 50%;
-  border: 2px solid var(--cyan);
-  margin: 0 auto;
+  border: 2px solid var(--blue);
+  margin: auto;
   margin-bottom: 2.5rem;
   overflow: hidden;
   -webkit-mask-image: url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAIAAACQd1PeAAAAGXRFWHRTb2Z0d2FyZQBBZG9iZSBJbWFnZVJlYWR5ccllPAAAAA5JREFUeNpiYGBgAAgwAAAEAAGbA+oJAAAAAElFTkSuQmCC");
   backface-visibility: hidden;
-  background: radial-gradient(circle at bottom, var(--cyan) 0%,  var(--Background) 60%);
+  background: radial-gradient(circle at bottom, var(--blue) 0%,  var(--Background) 60%);
+  margin-bottom: 7rem;
 }
 
 /* Estrellas fijas */
@@ -99,7 +96,7 @@ body {
   width: 20px;
   height: 20px;
   border-radius: 80% 0 55% 50% / 55% 0 80% 50%;
-  background-color: var(--cyan);
+  background-color: var(--blue);
   transform: rotate(135deg);
   margin-top: 20px;
   animation: flicker infinite 1s alternate ease-in-out;
@@ -130,7 +127,7 @@ body {
   width: 7%;
   height: 100%;
   top: 67%;
-  background-image: linear-gradient(to right, var(--cyan) 0%, #dafffe 25%, var(--blue) 50%, #dafffe 75%, var(--cyan) 100%);
+  background-image: linear-gradient(to right, var(--cyan) 0%, #dafffe 25%, var(--cyan) 50%, #dafffe 75%, var(--cyan) 100%);
 }
 
 /* “Temblor” vía CSS tal como en la referencia */
